# tmdb-dumper

./: LICENSE  README.md  azure-pipelines.yml  default.nix  install.sh  stack.yaml  tmdb-dumper.cabal
app/: Main.hs
src/: TMDBDump.hs
src/TMDBDump/Internal/: Api.hs  DB.hs  Logger.hs  Types.hs
