name:                tmdb-dumper
version:             0.1.2
synopsis:            Tool to dump TMDB data into a database
description:
  See https://github.com/jpathy/tmdb-dumper#readme.
homepage:            https://github.com/jpathy/tmdb-dumper#readme
license:             MIT
license-file:        LICENSE
author:              Jiten Kumar Pathy
maintainer:          jiten@posteo.net
copyright:           2019 Jiten Kumar Pathy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=2.0

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     TMDBDump,
                       TMDBDump.Internal.Types,
                       TMDBDump.Internal.Logger,
                       TMDBDump.Internal.Api,
                       TMDBDump.Internal.DB
  build-depends:
                base            >= 4.7 && < 5,
                aeson           ^>= 1.4.2,
                bytestring      ^>= 0.10.8,
                conduit         ^>= 1.3.1,
                conduit-extra   ^>= 1.3.2,
                containers      ^>= 0.6.0,
                data-has        ^>= 0.3.0,
                extra           ^>= 1.6.17,
                fast-logger     ^>= 2.4.15,
                http-client     ^>= 0.5.14,
                http-client-tls ^>= 0.3.5,
                http-conduit    ^>= 2.3.7,
                http-types      ^>= 0.12.3,
                monad-logger    ^>= 0.3.30,
                mtl             ^>= 2.2.2,
                safe-exceptions ^>= 0.1.7,
                sqlite-simple   ^>= 0.4.16,
                stm             ^>= 2.5.0,
                text            ^>= 1.2.3,
                time            ^>= 1.8.0,
                unliftio-core   ^>= 0.1.2
  default-language:    Haskell2010
  default-extensions:
                     OverloadedStrings

executable tmdb-dumper
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Paths_tmdb_dumper
  build-depends:       base                 >= 4.7 && < 5,
                       optparse-applicative ^>= 0.14.3,
                       text                 ^>= 1.2.3,
                       tmdb-dumper
  default-language:    Haskell2010

-- test-suite tmdb-dumper-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , tmdb-dumper
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jpathy/tmdb-dumper
